tests/ui/external_subcommand_wrong_type.stderr
error[E0308]: mismatched types
  --> $DIR/external_subcommand_wrong_type.rs:13:15
   |
11 |   enum Command {
   |  ______-
12 | |     #[structopt(external_subcommand)]
13 | |     Other(Vec<CString>)
   | |         -     ^^^^^^^ expected `Vec<CString>`, found `Vec<OsString>`
   | |_________|
   |           arguments to this enum variant are incorrect
   |
   = note: expected struct `Vec<CString>`
              found struct `Vec<OsString>`
note: tuple variant defined here
  --> $DIR/external_subcommand_wrong_type.rs:13:5
   |
13 |     Other(Vec<CString>)
   |     ^^^^^
